# EDA

./: Data_Pre-processing_titanic.ipynb  Data_Preprocessing_Training.ipynb  EDA Class Walkthrough.ipynb  EDA Titanic individual walkthrough .ipynb  Week1_EDA  Solution.ipynb  employees_messy.csv  pyproject.toml
Model Pipeline workflow/: fitted_preprocessor.pkl  preprocessing_and_models.ipynb
Pre-processing and models/: final_pipeline.pkl  preprocessing_and_models.ipynb
Regression/: Week2_Day2_Regression.ipynb  used_cars_data.csv
assessment/: customer_beahviour_model_for_loan_targeting.ipynb
